# nms-blueprint-calculator

./: .bumpversion.cfg  .eslintignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  converted.json  entrypoint.sh  get_blueprint_data.py  items.csv  main.py  package.json  pyproject.toml  wsgi_conf.ini
.github/: FUNDING.yml
nms_blueprint_calculator/: __main__.py  server.py  utils.py
nms_blueprint_calculator/react_assets/: asset-manifest.json  index.html
nms_blueprint_calculator/react_assets/static/: blueprints.json
nms_blueprint_calculator/react_assets/static/css/: main.68ce2882.css  main.68ce2882.css.map  main.8e4fc84f.css  main.8e4fc84f.css.map
nms_blueprint_calculator/react_assets/static/js/: 787.546afb97.chunk.js  787.546afb97.chunk.js.map  main.60749544.js  main.60749544.js.map  main.a0001730.js  main.a0001730.js.map  main.a6ae83b9.js  main.a6ae83b9.js.map
nms_blueprint_calculator/templates/: index.html  swagger.json
public/: index.html  manifest.json  swagger.html
src/: App.css  App.js
src/services/: BlueprintService.js
tests/: test_nms_blueprint_calculator.py
