[tool.poetry]
name = "nms-blueprint-calculator"
version = "0.1.0"
description = ""
authors = ["Dakota Brown <dakota.kae.brown@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
google-cloud-firestore = "^2.5.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pre-commit = "^2.19.0"
uWSGI = "^2.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
