[tool.poetry]
name = "nms-blueprint-calculator"
version = "0.1.2"
description = ""
authors = ["Dakota Brown <dakota.kae.brown@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
google-cloud-firestore = "^2.5.3"
python-dotenv = "^0.20.0"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pre-commit = "^2.19.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
